<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87C4CB"
    android:backgroundTint="#87C4CB"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="?android:backgroundTint"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="uma bomba de gasolina ilustrando o app"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="#87C4CB"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_gasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:layout_marginHorizontal="30dp"
            android:ems="10"
            android:hint="@string/text_hint_gasolina"
            android:inputType="numberDecimal"
            android:textColorHint="@color/text_hint_gasolina"

            android:paddingBottom="4dp"
            android:paddingStart="4dp"

            />

        <EditText
            android:id="@+id/text_alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:ems="10"
            android:hint="@string/text_hint_alcool"
            android:inputType="numberDecimal"
            android:textColorHint="@color/text_hint_alcool"
            android:background="@drawable/edittext_border"
            android:paddingBottom="4dp"
            android:paddingStart="4dp"
            android:layout_marginTop="8dp"
            />

        <Switch
            android:id="@+id/swPercentual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="40dp"
            android:text="@string/_75"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/btCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/button_calcular" />

        <TextView
            android:id="@+id/textMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_message"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>